remove files, + fixes

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/jquery.fullPage.css">
 	<link rel="stylesheet" href="css/jquery.cover.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/common.css">
 </head>
 <body>
@@ -87,7 +89,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Корпоративный сайт</h4>
 									<p>UKAM</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/ukam.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -100,7 +102,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Блог</h4>
 									<p>Cards</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/cards.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -113,7 +115,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Landing Page</h4>
 									<p>MTITM</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/mtitm.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -126,7 +128,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Сайт футбольных ставок</h4>
 									<p>Mikost</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/mikost.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -139,7 +141,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Интернет-магазин</h4>
 									<p>Fashion Press</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/fashion_press.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -152,7 +154,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Landing Page</h4>
 									<p>Bootstrap</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/bootstrap_page.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -165,7 +167,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Landing Page</h4>
 									<p>Frebdm</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/frebdm.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -178,7 +180,7 @@
 								<div class="portfolio__mask-in">
 									<h4>Landing Page</h4>
 									<p>Remote Workers</p>
-									<a href="#">Посмотреть</a>
+									<a href="img/content/remote_workers.jpg" class="portfolio-fancybox">Увеличить</a>
 									<a href="#">Подробнее</a>
 								</div>
 							</div>
@@ -323,7 +325,7 @@
 	<script src="js/jquery.backgroundcover.min.js"></script>
 	<script src="js/jquery.form-validator.min.js"></script>
 	<script src="js/jquery.inview.min.js"></script>
-	<script src=""></script>
+	<script src="js/jquery.fancybox.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
