--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<!-- begin section__title  -->
 			<div class="section__title js-inview fadeInUp">
 				<h2>Главная</h2>
-				<h3>Мой принцип работы</h3>
+				<h3 class="js-inview">Мой принцип работы</h3>
 			</div><!-- end section__title -->
 			<!-- begin slider-main  -->
 			<div class="slider-main">
@@ -76,7 +76,7 @@
 			<!-- begin section__title  -->
 			<div class="section__title js-inview fadeInUp">
 				<h2>Портфолио</h2>
-				<h3>Мои последние работы</h3>
+				<h3 class="js-inview">Мои последние работы</h3>
 			</div><!-- end section__title -->
 			<!-- begin portfolio-wrap  -->
 			<div class="portfolio-wrap">
@@ -195,7 +195,7 @@
 			<!-- begin section__title  -->
 			<div class="section__title js-inview fadeInUp">
 				<h2>О себе</h2>
-				<h3>Познакомимся ближе</h3>
+				<h3 class="js-inview">Познакомимся ближе</h3>
 			</div><!-- end section__title -->
 			<!-- begin about-wrap -->
 			<div class="about-wrap">
@@ -257,7 +257,7 @@
 		<!-- begin section__title  -->
 			<div class="section__title js-inview fadeInUp">
 				<h2>Контакты</h2>
-				<h3>Оставьте свое сообщение</h3>
+				<h3 class="js-inview">Оставьте свое сообщение</h3>
 			</div><!-- end section__title -->
 			<!-- begin contacts  -->
 			<div class="contacts">
